feat: OrderDraft 모델 생성 및 CreateOrderRequest 자동 배정 방식으로 수정
- OrderDraft 모델 생성
  * Redis 저장용 주문서 임시 데이터 모델
  * DELIVERY/PICKUP 타입별 필드 분리
  * 혼합 주문 타입 검증 로직 추가
  * 30분 TTL 설정을 위한 validUntil 필드

- CreateOrderRequest 매장 자동 배정 방식으로 수정
  * departmentStoreId 필드 제거
  * validateOrderTypes 메서드에서 매장 관련 검증 로직 제거
  * 픽업 주문 시 상품 기반 매장 자동 배정으로 변경

- 주문 타입 혼재 방지
  * 동일 주문서 내 DELIVERY/PICKUP 혼합 불가
  * 첫 번째 상품 기준으로 주문 타입 결정